// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cell check cell should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-oq4emy"
    data-testid="0-1,1"
  />
</DocumentFragment>
`;

exports[`cell check cell should render correctly 2`] = `
<DocumentFragment>
  <div
    class="css-1pfp8zg"
    data-testid="1-1,1"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`cell check cell should render correctly 3`] = `
<DocumentFragment>
  <div
    class="css-spzl2v"
    data-testid="2-1,1"
  >
    2
  </div>
</DocumentFragment>
`;

exports[`cell check cell should render correctly 4`] = `
<DocumentFragment>
  <div
    class="css-qwh4sq"
    data-testid="3-1,1"
  >
    3
  </div>
</DocumentFragment>
`;

exports[`cell check cell should render correctly 5`] = `
<DocumentFragment>
  <div
    class="css-31jsrs"
    data-testid="4-1,1"
  >
    4
  </div>
</DocumentFragment>
`;

exports[`cell check cell should render correctly 6`] = `
<DocumentFragment>
  <div
    class="css-1fzczfp"
    data-testid="5-1,1"
  >
    5
  </div>
</DocumentFragment>
`;

exports[`cell check cell should render correctly 7`] = `
<DocumentFragment>
  <div
    class="css-e77skh"
    data-testid="6-1,1"
  >
    6
  </div>
</DocumentFragment>
`;

exports[`cell check cell should render correctly 8`] = `
<DocumentFragment>
  <div
    class="css-aljgbs"
    data-testid="7-1,1"
  >
    7
  </div>
</DocumentFragment>
`;

exports[`cell check cell should render correctly 9`] = `
<DocumentFragment>
  <div
    class="css-n61ljn"
    data-testid="8-1,1"
  >
    8
  </div>
</DocumentFragment>
`;

exports[`cell check cell should render correctly 10`] = `
<DocumentFragment>
  <div
    class="css-1xn280i"
    data-testid="9-1,1"
  >
    <div
      class="css-3tubcw"
    />
  </div>
</DocumentFragment>
`;

exports[`cell check cell should render correctly 11`] = `
<DocumentFragment>
  <div
    class="css-5803oy"
    data-testid="10-1,1"
  />
</DocumentFragment>
`;

exports[`cell check cell should render correctly 12`] = `
<DocumentFragment>
  <div
    class="css-5803oy"
    data-testid="11-1,1"
  >
    <div
      class="css-1w1u3hh"
    />
  </div>
</DocumentFragment>
`;

exports[`cell check cell should render correctly 13`] = `
<DocumentFragment>
  <div
    class="css-5803oy"
    data-testid="12-1,1"
  >
    <div
      class="css-1wbzzpj"
    />
  </div>
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 2`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 3`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 4`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 5`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 6`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 7`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 8`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 9`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 10`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 11`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 12`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;

exports[`cell check closeFramed should render correctly 13`] = `
<DocumentFragment>
  <div
    class="css-1mjcmhi"
  />
</DocumentFragment>
`;
